--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -1,11 +1,20 @@
+
 <!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Basketball Team Signup</title>
+  <title>Create A Basketball Team</title>
  </head>
  <body>
+   <form action="/team" method="POST">
+     <input placeholder = "Team name" type = "text" name = "name">  
+     <input placeholder ="Coach" type= "text" name= "coach">
+     <input placeholder ="Point Guard" type ="text" name ="pg">
+     <input placeholder ="Power Forward" type ="text" name ="pf">
+     <input placeholder ="Shooting Guard" type ="text" name ="sg">
+     <input placeholder ="Small Forward" type ="text" name ="sf">
+     <input placeholder ="Center" type ="text" name ="c">
+     <input type="submit" id="Submit" />
+   </form>
  </body>
 </html>
-
-
